# SBTi-finance-tool

./: .buildinfo  .gitignore  1_analysis_example.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CombinedDataSample.xlsx  DataRequirements.html  Dockerfile  FunctionalOverview.html  LICENSE  Legends.html  README.md  SBTi-licenses.md  SetupLicenses.ps1  SetupPackage.ps1  _config.yml  app.py  company_data.xlsx  company_data_test.xlsx  contributing.html  docker-compose.yml  docker-compose_aws.yml  docker-compose_aws_example.yml  environment.yml  flask-site-nginx.conf  genindex.html  getting_started.html  index.html  intro.html  licenses_overview.md  links.html  objects.inv  output.xlsx  poetry.toml  portfolio.xlsx  portfolio_data.xlsx  portfolio_data_2.csv  portfolio_data_test.xlsx  provider.xlsx  (+13 more)
.github/workflows/: docs2pages.yaml  notebooks.yml  ossaudit.yml  pythonpackage.yml  sphinx-docs-build.yml
SBTi/: __init__.py  configs.py  interfaces.py  portfolio_aggregation.py  portfolio_coverage_tvp.py  reporting.py  target_validation.py  target_valuation_protocol.py  temperature_score.py  utils.py
SBTi/data/: __init__.py  bloomberg.py  cdp.py  csv.py  data_provider.py  example_provider.py  excel.py  inmemory.py  iss.py  msci.py  sbti.py  trucost.py  urgentem.py  urgentum.py
SBTi/inputs/: companies-taking-action (7).xlsx:Zone.Identifier  current-Companies-Taking-Action-191.xlsx  current-Companies-Taking-Action.xlsx  regression_model_summary.xlsx  sr15_mapping.xlsx  target-dashboard.xlsx
_autoapi_templates/: index.html
_sources/: DataRequirements.rst.txt  FunctionalOverview.rst.txt  Legends.rst.txt  contributing.rst.txt  getting_started.rst.txt  index.rst.txt  intro.rst.txt  links.rst.txt  rest_api.rst.txt  terms.rst.txt
_sources/autoapi/: index.rst.txt
app/: app_server.py  config.json  portfolio_data_3  wsgi.py
app/data/: InputFormat.xlsx  data_test_temperature_score.csv  data_test_temperature_score_targets.csv
app/static/: swagger.json
app/uploads/: .gitignore
autoapi/: index.html
autoapi/SBTi/: index.html
config/: flask-site-nginx.conf  nginx.conf  supervisord.conf  uwsgi.ini
connector/: InputFormat.xlsx  excel.py
data/: data_provider_example.xlsx  example_data_provider_TS.xlsx  example_portfolio.csv
data_provider/: data_provider_input.py
docs/: 1_analysis_example.ipynb  2_getting_started.ipynb  4_analysis.ipynb  DataProviderTemplate.xlsx  DataRequirements.rst  FunctionalOverview.rst  Legends.rst  Makefile  PortfolioTemplate.csv  PortfolioTemplate.xlsx  ReadyMadeScoresTemplate.xlsx  conf.py  contributing.rst  getting_started.rst  index.rst  intro.rst  links.rst  make.bat  overview.rst  rest_api.rst
docs/_autoapi_templates/: index.rst
documents/files/: Portfolio_B.xlsx
examples/: 1_analysis_example.ipynb  1_getting_started-colab.ipynb  1_getting_started.ipynb  2_getting_started.ipynb  2_quick_temp_score_calculation.ipynb  2_scenarios.ipynb  3_portfolio_aggregations.ipynb  3_scenarios.ipynb  3_what-if-analysis.ipynb  4_analysis.ipynb  4_portfolio_aggregations.ipynb  4b_portfolio_agg_readmade_TS.ipynb  4b_portfolio_agg_readymade_TS.ipynb  5_reporting.ipynb  6_compare_temps_SP.ipynb  Simple_portfolio_coverage.ipynb  X_portfolio_coverage.ipynb  compareSP-to-SBTi.ipynb  environment.yml  example_portfolio.csv  getting_started.ipynb  requirements.txt  utils.py
examples/data/: TF_data_provider_example.xlsx  data_provider_example.xlsx  example_data_provider_TS.xlsx  example_portfolio.csv  sml_csv_test_portfolio.csv  sml_data_provider_KeyError_Issue.xlsx  ~$TF_data_provider_example.xlsx
protocol/: target_valuation_protocol.py
static/: swagger.json
streamlit/: app.py  main.py
swagger/: index.html  openapi.json
test/: test_e2e.py  test_edge_cases.py  test_portfolio_coverage_tvp.py  test_reporting.py  test_temperature_score.py
(+80 files in other folders)
