[tool.poetry]
name = "sbti-finance-tool"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "1.8.2"
six = "1.15.0"
pandas = "1.3.4"
xlrd = "1.2.0"
requests = "2.26.0"
openpyxl = "3.0.9"


[tool.poetry.dev-dependencies]
black = "*"
pylint = "^2.10.2"
ipykernel = "6.5.0"

[tool.pyright]
venv = ".venv"
